[package]
name = "jtlc"
version = "0.1.1-alpha"
edition = "2021"
authors = ["Eta Carinae"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
opt-level = 3
overflow-checks = true